# expand-regular-expression

./: README.md  hello.py  main.py  pyproject.toml
