[project]
name = "expand-regular-expression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sre-yield>=1.2",
]

[tool.uv]
dev-dependencies = [
    "ruff-lsp>=0.0.57",
    "ruff>=0.6.8",
]

[tool.rye]
dev-dependencies = [
    "ruff-lsp>=0.0.57",
]
